bugfix for tootip height to fit on overflowing content

--- a/index.css
+++ b/index.css
@@ -135,6 +135,7 @@ svg{
     position: absolute;
     width: 120px;
     height: 60px;
+    min-height: fit-content;
     padding: 2px;    
     text-align: center; 
     font-family:"Playfair Display","sans-serif";
